# blaggregator

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CONTRIBUTE.md  Dockerfile  Makefile  Procfile  README.md  TODO  TODO.md  celerybeat-schedule.db  contribute.md  docker-compose.pg.yml  docker-compose.yml  dump.rdb  manage.py  pyproject.toml  requirements.txt  v1_TODO.md  web-variables.env
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
blaggregator/: settings.py  test_settings.py  urls.py  wsgi.py
blaggregator/settings/: __init__.py  _base.py  base.py  development.py  docker.py  heroku.py  production.py  staging.py  travis.py
docs/: development.md  server-maintenance-and-deploys.md
home/: TEMPdir.py  admin.py  bloggergrabber27.py  context_processors.py  feedergrabber27.py  feeds.py  middleware.py  models.py  oauth.py  staging.txt  tests.py  token_auth.py  urls.py  utils.py  views.py  zulip_helpers.py
home/migrations/: 0001_initial.py  0002_auto_20161201_2313.py  0002_auto__add_field_post_item_id.py  0003_added_comment_model.py  0003_auto_20180313_1026.py  0004_added_postFK_to_comment.py  0004_auto_20180316_0351.py  0005_blog_skip_crawl.py  0005_change_itemid_to_slug.py  0006_auto_20180317_0559.py  0006_restore_unique_constraint.py  0007_auto_20180318_0236.py  0007_remove_irc_param.py  0008_auto_20191224_0511.py  0008_auto__chg_field_blog_feed_url__chg_field_blog_url__chg_field_hacker_tw.py  0009_hacker_zulip_id.py  (+13 more)
scripts/: delete_messages  readme_to_about
temp/: how_to_migrate.txt  howimigratedthedb.txt  installing_south.txt  staging.txt
(+46 files in other folders)
